# light-contact

./: .gitignore  Cargo.toml  README.md  index.html  light-contact-b650577ce6af6ef1.js
.github/workflows/: release.yaml
assets/shaders/: fadeout.wgsl
assets/space/: alien.glb  astronautA.glb  astronautB.glb  barrel.glb  barrels.glb  barrels_rail.glb  bones.glb
credits/: CREDITS.md
src/: assets.rs  audio.rs  cursor.rs  enviroment.rs  fadeout.rs  lib.rs  main.rs  overlay.rs  player.rs  states.rs  style.rs
src/assets/: mod.rs  space.rs
src/grid/: grid.wgsl  mod.rs
src/states/: intro.rs  loading.rs  main_menu.rs  map.rs  sandbox.rs
