[package]
name = "light-contact"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.7" }
sly_camera_controller = { git = "https://github.com/slyedoc/sly_camera_controller", branch = "main" }
sly_physics = { git = "https://github.com/slyedoc/sly_physics", branch = "main" }
bevy-inspector-egui = "0.11.0"
#bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
rand = "0.8.5"
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", features = ["3d"] }
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }

#bevy = { git = "https://github.com/cart/bevy", branch = "better-materials" }
#bevy-ui-navigation = { path = "../ui-navigation" }
#bevy_asset_loader = "0.11.0"
